Changed grid layout on .recipient to fix appearance on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ main {
     grid-column: 3/4;
     grid-row: 2/3; }
   .recipient .btn--menu {
-    grid-column: 7/8;
+    grid-column: 4/5;
     grid-row: 1/3; }
 
 .mssg--recipient {
